# eaa-traffic-monitor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .sourcery.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GitVersion.yml  LICENSE  README.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  justfile  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cache-cleanup.yml  ci.yml  deploy-docs.yml  release.yml
design/brand/: DESIGN-LANGUAGE.md  brand-preview.html  tokens.css  tokens.ts
design/brand/icns/: app-icon-ember.icns
docs/: Implementation-Plan.md  Panel-System-Plan.md  README.md  WYVERN-RESKIN-PLAN.md  index.html
docs/assets/brand/: wyvern.css
docs/decisions/: README.md
docs/design/: Audio.md  Layout.md  Personas.md  Tracking.md  Video.md  Weather.md
docs/design/Stakeholders/: Casual-Spotter.md  Command-Center-Enthusiast.md  Programmer-Aviator.md
docs/development/: Getting-Started.md  Pages-deployment-runbook.md  TechStack.md  Testing.md
src/main/: config.ts  fr24.ts  fr24Constants.ts  http.ts  index.ts  ipc.ts  liveatcDirectory.ts  menu.ts  plsResolver.ts  popouts.ts  protocol.ts  rendererServer.ts  session.ts  weather.ts  weatherPoller.ts  windowState.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  PopoutApp.tsx  main.tsx
src/renderer/src/assets/: fonts.css  main.css
src/renderer/src/audio/: AddChannelModal.tsx  AudioPanel.tsx  README.md  StreamStrip.tsx  backoff.ts  devices.ts  ducking.ts  engine.ts  orderMath.ts  reorder.ts  streamPlayer.ts  vad.ts
src/renderer/src/components/: AboutModal.tsx  Fr24Panel.tsx  (+6 more)
src/shared/: README.md  defaultConfig.ts  format.ts  fr24Bounds.ts  ipc.ts  koshFallback.json  koshFallback.ts  layoutProfiles.ts  layoutTemplates.ts  liveatcDirectory.ts  panelLayout.ts  plsParser.ts  session.ts  userAgent.ts  videoGeometry.ts  weather.ts  windowBounds.ts
tests/e2e/: audio.spec.ts  channels.spec.ts  launch.spec.ts  layoutProfiles.spec.ts  panelDrag.spec.ts  panels.spec.ts  popout.spec.ts  support.ts  video.spec.ts
tests/unit/: backoff.test.ts  canvasRenderOrder.test.ts  configSchema.test.ts  devices.test.ts  dropZones.test.ts  ducking.test.ts  format.test.ts  fr24Bounds.test.ts  koshFallback.test.ts  layoutProfiles.test.ts  layoutRects.test.ts  layoutTemplates.test.ts  liveatcDirectory.test.ts  menuBridge.test.ts  orderMath.test.ts  panelLayoutSanitize.test.ts  panelLayoutTree.test.ts  plsParser.test.ts  session.test.ts  userAgent.test.ts  vad.test.ts  videoGeometry.test.ts  videoLayout.test.ts  weather.test.ts  windowBounds.test.ts
tests/unit/fixtures/: liveatc-search-osh.html
website/: mkdocs.yml  pyproject.toml
website/overrides/: home.html  main.html
(+24 files in other folders)
